tests/MathML/basic/bad/tooFewContentContainer.mml
<math xmlns="http://www.w3.org/1998/Math/MathML"><mtable><mtr><mtd><mtext>reln</mtext></mtd><mtd><reln><lt></lt></reln><mo>,</mo><reln><lt></lt><ci>a</ci></reln></mtd></mtr><mtr><mtd><mtext>interval</mtext></mtd><mtd><interval><ci>2</ci></interval></mtd></mtr><mtr><mtd><mtext>lambda</mtext></mtd><mtd><lambda><bvar><ci>x</ci></bvar></lambda><mo>,</mo><lambda><apply><ci>x</ci></apply></lambda></mtd></mtr><mtr><mtd><mtext>bvar</mtext></mtd><mtd><bvar><degree><cn>2</cn></degree></bvar></mtd></mtr><mtr><mtd><mtext>set</mtext></mtd><mtd><set><condition><reln><lt></lt><ci>x</ci><cn>5</cn></reln></condition></set></mtd></mtr><mtr><mtd><mtext>list</mtext></mtd><mtd><list><condition><reln><lt></lt><ci>x</ci><cn>5</cn></reln></condition></list></mtd></mtr></mtable></math>